Add highest score comparison and end-game score display

--- a/BubbleGame/Index.html
+++ b/BubbleGame/Index.html
@@ -12,21 +12,24 @@
         <div id="main">
             <div id="panel">
                 <div id="ptop">
-                    <div class="elem">Hit
-                        <div id = "hitVal" class="box">
-                            0
-                        </div>
-                    </div>
-                    <div class="elem">Timer
-                        <div id= "timerVl" class="box">
-                            60
-                        </div>
-                    </div>
-                    <div class="elem">Score
-                        <div id="scoreVal" class="box">
-                            0
-                        </div>
-                    </div>
+                   <div class="elem">Hit
+    <div id="hitVal" class="box">0</div>
+</div>
+
+<div class="elem">Timer
+    <div id="timerVl" class="box">60</div>
+</div>
+
+<div class="elem">Score
+    <div id="scoreVal" class="box">0</div>
+</div>
+
+<div class="elem">
+    <label style="display:flex; align-items:center; gap:6px; cursor:pointer;">
+        <input id="hideScoreOnEnd" type="checkbox">
+        Hide score at end
+    </label>
+</div>
                 </div>
     
                 <div id="pbtm"></div>
